--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #109ceb;
   font-family: "Poppins", sans-serif;
+}
+
+header {
+  display: flex;
+  width: 90%;
+  height: 10vh;
+  margin: auto;
+  align-items: center;
+  background-color: lightslategray;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-grow: 1;
+  background-color: lightgreen;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+  background-color: lightpink;
+  list-style: none;
+}
+
+.nav-link {
+  padding: 0px 16px 0px 16px;
+}
+
+.sign-in {
+  display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+  align-items: center;
+  padding: 0px 16px 0px 16px;
+  background-color: lightsalmon;
 }
