--- a/style.css
+++ b/style.css
@@ -1,47 +1,65 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+
+/* 
+#373a3c;
+#333333;
+*/
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  background-color: #109ceb;
 }
 
-body {
-  background-color: #109ceb;
+li,
+a,
+button {
   font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: aliceblue;
+  text-decoration: none;
 }
 
 header {
   display: flex;
-  width: 90%;
-  height: 10vh;
-  margin: auto;
+  justify-content: space-between;
   align-items: center;
-  background-color: lightslategray;
+  padding: 20px 10%;
 }
 
-.logo-container {
-  display: flex;
-  justify-content: flex-start;
-  flex-grow: 1;
-  background-color: lightgreen;
+.home {
+  cursor: pointer;
 }
 
 .nav-links {
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
-  background-color: lightpink;
   list-style: none;
 }
 
-.nav-link {
-  padding: 0px 16px 0px 16px;
+.nav-links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
 
-.sign-in {
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
-  align-items: center;
-  padding: 0px 16px 0px 16px;
-  background-color: lightsalmon;
+.nav-links li a {
+  transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+  color: lightcoral;
+}
+
+button {
+  padding: 8px 24px;
+  background-color: rgba(255, 255, 255, 1);
+  color: #109ceb;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
