saving changes to landing page

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,108 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
+
+/* 
+#373a3c;
+#333333;
+*/
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
   background-color: #109ceb;
+}
+
+h4 {
   font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: white;
+}
+
+li,
+a,
+button {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5%;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.home {
+  padding-right: 8px;
+}
+
+.nav-links {
+  list-style: none;
+}
+
+.nav-links li {
+  display: inline-block;
+  padding: 0px 16px;
+}
+
+.nav-links li a {
+  transition: all 0.3s ease 0s;
+}
+
+.nav-links li a:hover {
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+button {
+  padding: 8px 24px;
+  background-color: rgba(255, 255, 255, 1);
+  color: #109ceb;
+  border: none;
+  border-radius: 24px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.copyright {
+  display: inline-block;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  color: white;
+  padding-right: 24px;
+}
+
+.legal {
+  display: inline-block;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 5%;
+}
+
+footer a {
+  display: inline-block;
+  padding: 0px 16px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.8);
 }
