--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,11 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+}
+
+header,
+.hero-section,
+footer {
   background-color: #109ceb;
 }
 
@@ -75,6 +80,43 @@ button {
 
 button:hover {
   background-color: rgba(255, 255, 255, 0.8);
+}
+
+.modal-bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  font-family: "Poppins", sans-serif;
+  width: 40%;
+  height: 40%;
+}
+
+#modal-btn {
+  padding: 8px 24px;
+  background-color: #109ceb;
+  color: rgba(255, 255, 255, 1);
+  border: none;
+  border-radius: 24px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+#modal-btn:hover {
+  background-color: rgb(11, 132, 202);
 }
 
 .copyright {
