--- a/public/style.css
+++ b/public/style.css
@@ -11,9 +11,8 @@
   box-sizing: border-box;
 }
 
-header,
-.hero-section,
-footer {
+body {
+  height: 100%;
   background-color: #109ceb;
 }
 
@@ -82,6 +81,49 @@ button:hover {
   background-color: rgba(255, 255, 255, 0.8);
 }
 
+#totoro {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+.copyright {
+  display: inline-block;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  color: white;
+  padding-right: 24px;
+}
+
+.legal {
+  display: inline-block;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 5%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+footer a {
+  display: inline-block;
+  padding: 0px 16px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* modal section start */
+/*
 .modal-bg {
   display: flex;
   justify-content: center;
@@ -118,33 +160,5 @@ button:hover {
 #modal-btn:hover {
   background-color: rgb(11, 132, 202);
 }
-
-.copyright {
-  display: inline-block;
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  font-weight: 300;
-  color: white;
-  padding-right: 24px;
-}
-
-.legal {
-  display: inline-block;
-}
-
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 5%;
-}
-
-footer a {
-  display: inline-block;
-  padding: 0px 16px;
-}
-
-footer a:hover {
-  text-decoration: underline;
-  color: rgba(255, 255, 255, 0.8);
-}
+*/
+/* modal section end */
