--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap");
 
-/* 
-#373a3c;
-#333333;
-*/
-
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5%;
+}
 body {
   height: 100%;
-  background-color: #109ceb;
+  background: #109ceb;
   font-family: "Poppins", sans-serif;
 }
+
+/*
+h1 {
+  font-weight: bold;
+  margin: 0;
+}
+*/
 
 h4 {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
   color: white;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 300px;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 10px;
 }
 
 li,
@@ -31,13 +47,6 @@ button {
   font-size: 16px;
   color: white;
   text-decoration: none;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 5%;
 }
 
 .logo-container {
@@ -68,7 +77,7 @@ header {
   color: rgba(255, 255, 255, 0.8);
 }
 
-button {
+#nav-button {
   padding: 8px 24px;
   background-color: rgba(255, 255, 255, 1);
   color: #109ceb;
@@ -78,8 +87,55 @@ button {
   transition: all 0.3s ease 0s;
 }
 
-button:hover {
+#nav-button:hover {
   background-color: rgba(255, 255, 255, 0.8);
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.form-container form {
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.social {
+  color: #109ceb;
+  font-size: 20px;
+}
+
+button {
+  padding: 8px 24px;
+  background-color: #109ceb;
+  color: #fff;
+  border: none;
+  border-radius: 24px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+button:hover {
+  background-color: #0275b8);
 }
 
 #totoro {
@@ -122,44 +178,3 @@ footer a:hover {
   text-decoration: underline;
   color: rgba(255, 255, 255, 0.8);
 }
-
-/* modal section start */
-/*
-.modal-bg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-  background-color: white;
-  font-family: "Poppins", sans-serif;
-  width: 40%;
-  height: 40%;
-}
-
-#modal-btn {
-  padding: 8px 24px;
-  background-color: #109ceb;
-  color: rgba(255, 255, 255, 1);
-  border: none;
-  border-radius: 24px;
-  cursor: pointer;
-  transition: all 0.3s ease 0s;
-}
-
-#modal-btn:hover {
-  background-color: rgb(11, 132, 202);
-}
-*/
-/* modal section end */
