--- a/public/style.css
+++ b/public/style.css
@@ -140,9 +140,10 @@ button:hover {
 
 #totoro {
   display: block;
+  margin-top: -40px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 100%;
+  max-width: 860px;
 }
 
 .copyright {
